Fix some bugs in the navigator. Allow for a less restrictive collapse of the navigator levels. Three modes are easily supported by navigator's tree-view-like thing now: exploded, selected only, and selected + selected parent's immediate children visible (but collapsed).

--- a/client/app/css/schema-navigator-window.css
+++ b/client/app/css/schema-navigator-window.css
@@ -10,13 +10,14 @@ opacity: 1.0; z-index: 1;}
 
 
 .classSchemaViewModelNavigatorMenuLevel {
-margin: 0px;
+margin: 2px;
 font-family: Arial;
-box-shadow: 1px 1px 6px #006699;
+-moz-border-radius: 4px; border-radius: 4px;
+box-shadow: 1px 1px 5px #000033;
 }
 
 .classNavigatorPathWindow {
-font-family: Courier;
+font-family: Arial;
 font-size: 10pt;
 font-weight: bold;
 color: #003366;
